--- a/templates/ask.html
+++ b/templates/ask.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class = "col">
-    <div class = "row bold_header">Новый вопрос</div>
+    <div class = "row bold_header">{% trans 'Новый вопрос' %}</div>
     <form style = "padding-top: 2%" method="post">
         {% csrf_token %}
         {% for field in form %}
@@ -23,7 +24,7 @@
             {{ form.non_field_errors }}
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-success" type="submit">Отправить вопрос</button>
+            <button class="btn btn-success" type="submit">{% trans 'Отправить вопрос' %}</button>
         </div>
     </form>
 </div>
