--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 
@@ -21,18 +22,23 @@
                 </a>
             </div>
 
-            <div class="col-5 text-center align-self-center">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Поиск по тегам">
-                    <button class="btn btn-outline-secondary" style="background-color: #ffffff" type="button">
-                        <img src="{% static '/images/search.png' %}">
-                    </button>
+            <form class="col-5 text-center align-self-center" action="{% url 'find' %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-9 text-end">
+                         <input type="search" class="form-control" placeholder="{% trans 'Поиск по вопросам' %}" name="search">
+                    </div>
+                    <div class="col-3 text-start">
+                        <button class="btn btn-outline-secondary" style="background-color: #ffffff" type="submit">
+                            <img src="{% static '/images/search.png' %}">
+                        </button>
+                    </div>
                 </div>
-            </div>
+            </form>
 
             <form class="col-2 align-self-center" action="{% url 'ask' %}">
                 <button class="btn btn-primary" style="background-color: rgb(245, 71, 65); border-color: #ff433d;">
-                    Задать вопрос
+                    {% trans 'Задать вопрос' %}
                 </button>
             </form>
 
@@ -47,18 +53,18 @@
                 </a>
                 <a class="row" style="color: #b80600; padding-bottom: 0; padding-top : 0"
                    href="{% url 'logout' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
-                    Выход
+                    {% trans 'Выход' %}
                 </a>
             </div>
             {% else %}
             <a class="col-1 align-self-center text-end"
                href="{% url 'login' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
-                <button class="btn btn-primary">Вход</button>
+                <button class="btn btn-primary">{% trans 'Вход' %}</button>
             </a>
             <a class="col-1 align-self-center text-end"
                href="{% url 'signup' %}?continue={{ request.path }}?{{ request.GET.urlencode }}">
                 <button class="btn btn-light">
-                    Регистрация
+                    {% trans 'Регистрация' %}
                 </button>
             </a>
             {% endif %}
@@ -72,34 +78,24 @@
             {% block content %}
             {% endblock %}
             <div class="col-3">
-                <p class="bold_header text-center">Популярные теги</p>
-                <div class="container">
-                    <div class="row text-start" style="font-size: 18px; padding-top: 4%">
-                        <div class="col-6" style="color: blue">VK Education</div>
-                        <div class="col-3" style="color: rgb(56, 197, 150)">Chrome</div>
-                        <div class="col-3" style="color: rgb(46, 14, 105)">Golang</div>
-                    </div>
-                    <div class="row text-start" style="font-size: 18px; padding-top: 4%">
-                        <div class="col-4" style="color: rgb(226, 44, 44)">Java</div>
-                        <div class="col-8" style="color: rgb(41, 11, 11)">Машинное обучение</div>
-                    </div>
-                    <div class="row text-start" style="font-size: 18px; padding-top: 4%">
-                        <div class="col" style="color: rgb(145, 17, 219)">Алгоритмы</div>
-                        <div class="col" style="color: rgb(24, 202, 33)">C#</div>
-                        <div class="col" style="color: rgb(105, 58, 14)">ChatGPT</div>
-                    </div>
+                <div class="bold_header text-center" style="padding-bottom: 3%">
+                    {% trans 'Популярные теги' %}
                 </div>
-
-                <div class="bold_header text-center" style="padding-top: 15%; padding-bottom: 3%">Лучшие участники</div>
                 <ul style="font-size: 18px">
-                    <li style="padding-top: 1%">Джон фон Нейман</li>
-                    <li style="padding-top: 1%">Эдсгер Вибе Дейкстра</li>
-                    <li style="padding-top: 1%">Ада Лавлейс</li>
-                    <li style="padding-top: 1%">Гордон Мур</li>
-                    <li style="padding-top: 1%">Павел Дуров</li>
-                    <li style="padding-top: 1%">Стив Джобс</li>
-                    <li style="padding-top: 1%">Дженсен Хуанг</li>
-                    <li style="padding-top: 1%">Лиза Су</li>
+                {% for item in popular_tags %}
+                    <li style="padding-top: 1%">
+                        <a href = "{% url 'search' item.tag %}"> {{ item.tag }}</a>
+                    </li>
+                {% endfor %}
+                </ul>
+
+                <div class="bold_header text-center" style="padding-top: 15%; padding-bottom: 3%">
+                    {% trans 'Лучшие участники' %}
+                </div>
+                <ul style="font-size: 18px">
+                    {% for member in best_members %}
+                    <li style="padding-top: 1%">{{ member.login }}</li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
