--- a/templates/components/question_item_page.html
+++ b/templates/components/question_item_page.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <div class="question_header text-left" style="font-size: 24px">
     {{ item.title }}
@@ -20,12 +21,12 @@
                 {{ item.text }}
             </div>
             <div class="row" style="font-style: italic; padding-top: 5%">
-                Вопрос добавлен {{ item.date }}
+                {% trans 'Вопрос добавлен' %} {{ item.date }}
             </div>
         </div>
         <div class="row" style="padding: 1%; padding-left: 0%">
             <div class="col" style="padding-left: 2%">
-                Теги:
+                {% trans 'Теги:' %}
                 {% for tag in item.get_tags %}
                 <a href="{% url 'search' tag %}" style="padding-left: 1%;">
                     {{ tag }}
