--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class = "col-4"></div>
 <div class = "col">
     <div class = "mb-3 bold_header" style = "padding-bottom: 1%">
-        Вход в аккаунт
+        {% trans 'Вход в аккаунт' %}
     </div>
     <form method="post">
         {% csrf_token %}
@@ -22,11 +23,11 @@
         <div style = "color: red">
             {{ form.non_field_errors }}
         </div>
-        <button type="submit" class="btn btn-primary">Войти</button>
+        <button type="submit" class="btn btn-primary">{% trans 'Войти' %}</button>
     </form>
     <div class = "row" style = "padding-top: 5%">
         <a href = "{% url 'signup' %}">
-            Еще нет аккаунта? Зарегистрируйтесь!
+            {% trans 'Еще нет аккаунта? Зарегистрируйтесь!' %}
         </a>
     </div>
 </div>
